Feb 13 2007  devel  Fixed scrolling (again)
Feb 10 2007  devel  Fixed long-standing bug in new network info in 
                     kismet_client
Feb 08 2007  devel  Fixed scrolling in kismet_client
                    Fixed handling of bursty traffic in kismet_client
                    Fixed gpsd parsing when lock forcing is used
                    Merged patch from Alan Grow for RSSI and better signal
                     plotting in kismet_client
Feb 07 2007  devel  Fixed mis-detecting some networks as WEP
                    Fixed not assigning crypt types from data frames
                    Added TKIP and CCMP detection in data frames

Jan 25 2007  *****  SVN ate its face off, bulk commit of previous patches from
                    time of last SVN backup.  Sorry everyone.

Jan 25 2007  devel  Fixed several minor errors including closing -1 fds
Jan 25 2007  devel  Fixed gps file being left when gpsd not available
Jan 24 2007  devel  Added significant optimization to manuf lookups
                    Fixed manuf lookups in the client
                    Reduced client memory requirements
Jan 22 2007  devel  Added daemon mode on request
Jan 17 2007  devel  Fixed compilation on  2.4.x linux kernels
                    Merged patch from Kili fixing use of unsigned ints as
                     fds (eliminates warnings and potentially bunk error
                     messages)

Jan 16 2007 2007-01 Minor patch to properly #ifdef around a linux source
                    And again.

Jan 15 2007 2007-01 Released Kismet-2007-01-R1
                    Added multiple IDS alerts (invalid disconnect codes, WVE
                     alerts, MSF driver exploits)
                    Added Win32 native capture support with CACE Airpcap
                    Improved BSD support & bugfixes
                    Memory mismanagement crashes fixed
                    Cleaner autoconf output
                    Nokia770/800 support
                    Removed embedded libpcap copy