@@ -1,4 +1,5 @@
 Feb 13 2007  devel  Fixed scrolling (again)
+                    Added ifconfig down to wext monitor mode for dscape
 Feb 10 2007  devel  Fixed long-standing bug in new network info in 
                      kismet_client
 Feb 08 2007  devel  Fixed scrolling in kismet_client
